--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">    <title>Document</title>
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
     <section>
@@ -21,15 +22,32 @@
         </div>
     </section>
     <script>
+        window.onload = function(){
+            fetch('http://localhost:4000/messages')
+                .then(response => response.json())
+                .then(json => {
+                    json.forEach(element => {
+                        let { name, message} = element;
+                        addMessage({name, message});
+                    });
+                });
+            const socket = io()    
+
+        }
+        
         const addMessage = ({ name, message }) => {
             const h3 = document.createElement('h3');
             h3.innerText = `${name}, message: ${message}`;
             document.querySelector('#messages').appendChild(h3);
+            // fetch('http://localhost:4000/messages', {
+            //     method: 'POST',
+            //     body: { name: 'jane', message: 'test' }
+            //     })
         };
+        socket.on('message', addMessage)
         const handleMessage = () => {
             addMessage({name: 'lucas', message: 'text'});
         };
-
     </script>
 </body>
 </html>
